--- a/src/common/sass/icon.css
+++ b/src/common/sass/icon.css
@@ -1,17 +1,17 @@
 @font-face {
-  font-family: 'seller-font';
-  src:  url('fonts/seller-font.eot?otrba1');
-  src:  url('fonts/seller-font.eot?otrba1#iefix') format('embedded-opentype')
-    url('fonts/seller-font.ttf?otrba1') format('truetype'),
-    url('fonts/seller-font.woff?otrba1') format('woff'),
-    url('fonts/seller-font.svg?otrba1#seller-font') format('svg');
+  font-family: 'icomoon-eleme';
+  src:  url('../fonts/icomoon-eleme.eot?3h4jcp');
+  src:  url('../fonts/icomoon-eleme.eot?3h4jcp#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon-eleme.ttf?3h4jcp') format('truetype'),
+    url('../fonts/icomoon-eleme.woff?3h4jcp') format('woff'),
+    url('../fonts/icomoon-eleme.svg?3h4jcp#icomoon-eleme') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
 [class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'seller-font' !important;
+  font-family: 'icomoon-eleme' !important;
   speak: none;
   font-style: normal;
   font-weight: normal;
@@ -21,36 +21,36 @@
 
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .icon-add_circle:before {
-  content: "\e900"
+  content: "\e900";
 }
 .icon-arrow_lift:before {
-  content: "\e901"
+  content: "\e901";
 }
 .icon-check_circle:before {
-  content: "\e902"
+  content: "\e902";
 }
 .icon-close:before {
-  content: "\e903"
+  content: "\e903";
 }
 .icon-favorite:before {
-  content: "\e904"
+  content: "\e904";
 }
 .icon-keyboard_arrow_right:before {
-  content: "\e905"
+  content: "\e905";
 }
 .icon-remove_circle_outline:before {
-  content: "\e906"
+  content: "\e906";
 }
 .icon-shopping_cart:before {
-  content: "\e907"
+  content: "\e907";
 }
 .icon-thumb_down:before {
-  content: "\e908"
+  content: "\e908";
 }
 .icon-thumb_up:before {
-  content: "\e909"
+  content: "\e909";
 }
